# greptile-mcp

./: .clinerules  .cursorrules  .dev.vars.example  .dockerignore  .env.example  .eslintrc.json  .gitignore  .mocharc.json  .taskmasterconfig  AGENT_QUICK_CARD.md  AGENT_TEMPLATES.md  AGENT_USAGE.md  ARCHITECTURE_NOTES.md  CLAUDE.md  COMPATIBILITY_REPORT.md  DEPLOYMENT.md  DOCKER_REGISTRY_SUBMISSION.md  Dockerfile  Dockerfile.modern  Dockerfile.smithery  FINAL_CLEANUP_STATUS.md  HTTP_IMPLEMENTATION.md  HTTP_IMPLEMENTATION_COMPLETE.md  HTTP_USAGE_GUIDE.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  LICENSE  LOCAL_USAGE.md  MIGRATION_CHECKLIST.md  MISSING_HTTP_IMPLEMENTATION_EXAMPLE.md  MODERNIZATION_SUMMARY.md  OAUTH_IMPLEMENTATION_SUMMARY.md  OAUTH_README.md  OBJECTIVES_GUIDE.md  PRE_SUBMISSION_CHECKLIST.md  PROJECT_COMPLETION.md  PRP_COMPREHENSIVE_FRAMEWORK.md  PR_RESPONSE_ACTION_PLAN.md  PR_REVIEW_RESPONSE.md  README.md  (+56 more)
.smithery/: index.cjs
algorithms/: quicksort.js
cloudflare/: .dev.vars.example  DURABLE_OBJECTS_IMPLEMENTATION.md  deploy.sh  oauth_config_examples.md  session_durable_object.py  shared_utils.py  test_session_management.py  worker.py  worker_fixed.py  worker_minimal.py  worker_simple.py  worker_stdlib.py
config/: continue_config.json  smithery.yaml  vscode_mcp_config.json
docs/: README.md  mcp-remote.md
examples/: cognitive_synergy_integration.ts  demo_hardcoded_session.py  run_greptile.py
memory-bank/: activation_protocol.md  activeContext.md  greptile-mcp-implemention.md  productContext.md  progress.md  projectbrief.md  reactivation_protocol.md  systemPatterns.md  task_log.md  techContext.md  testing_setup.md
phases_output/: final_analysis.md  metrics.md  phase1_discovery.md  phase2_planning.md  phase3_analysis.md  (+2 more)
(+98 files in other folders)
